- Add parsing KPI-Wing text file service - Add other services - Add convert service from geomagnatic to geographic - Add some other suff
